--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.11",
-    "expo-status-bar": "~1.11.1",
+    "expo": "~49.0.15",
+    "expo-dev-client": "~2.4.13",
+    "expo-font": "^11.10.2",
+    "expo-linear-gradient": "^12.7.2",
+    "expo-splash-screen": "^0.26.4",
+    "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-dom": "^18.2.0",
+    "react-native": "0.72.6",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
