--- a/package.json
+++ b/package.json
@@ -9,19 +9,52 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/nunito": "^0.2.3",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.22.3",
+    "@react-native-community/netinfo": "^11.2.1",
+    "@react-native-seoul/masonry-list": "^1.4.2",
+    "@react-navigation/bottom-tabs": "^6.5.12",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
+    "@reduxjs/toolkit": "^2.0.1",
+    "@tamagui/config": "^1.90.9",
+    "@tamagui/core": "^1.90.9",
+    "@types/react-navigation": "^3.4.0",
+    "@types/react-redux": "^7.1.33",
     "expo": "~49.0.15",
     "expo-dev-client": "~2.4.13",
     "expo-font": "^11.10.2",
     "expo-linear-gradient": "^12.7.2",
     "expo-splash-screen": "^0.26.4",
     "expo-status-bar": "~1.6.0",
+    "jwt-decode": "3.1.2",
+    "lucide-react-native": "^0.344.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.6",
-    "react-native-web": "~0.19.6"
+    "react-native-element-dropdown": "^2.10.1",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gifted-chat": "^2.4.0",
+    "react-native-popover-view": "^5.1.8",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "^15.0.0",
+    "react-native-web": "~0.19.6",
+    "react-navigation": "^5.0.0",
+    "react-redux": "^9.0.4",
+    "redux": "^5.0.0",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^3.1.0",
+    "tamagui": "^1.90.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.14",
+    "@types/react-native": "^0.72.8",
+    "typescript": "^5.1.3"
   },
   "private": true
 }
