--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-element-dropdown": "^2.10.1",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-gifted-chat": "^2.4.0",
+    "react-native-media-query": "^2.0.1",
     "react-native-popover-view": "^5.1.8",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
